--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="personajes"></div>
 </body>
+<script type="module" src="main.js"></script>
 </html>
